objects/GEMS_ReportingMilestone_Matrix__mdt.object
<CustomObject>
    <fields>
        <fullName>Member_Ready_Cases__c</fullName>
        <label>Member Ready Cases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Ready_ID_Cards_Cases__c</fullName>
        <label>Member Ready ID Cards Cases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Ready_Cases__c</fullName>
        <label>Service Ready Cases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Sub_Type__c</fullName>
        <label>Submission Sub Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <label>Submission Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GEMS ReportingMilestone Matrix</label>
    <pluralLabel>GEMS ReportingMilestone Matrix</pluralLabel>
</CustomObject>